--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <script src="js/2.mostrar-nombre-navegador.js"></script> -->
         <!-- <script src="js/3.number-operadores.js"></script> -->
         <!-- <script src="js/4.booleanos-operadores.js"></script> -->
-        <!-- <script src="js/5.modales-condicional-if.js"></script> -->
-        <script src="js/4.1.booleanos-repaso.js"></script>
+        <!-- <script src="js/4.1.booleanos-repaso.js"></script> -->
+        <script src="js/5.modales-condicional-if.js"></script>
     </body>
 </html>
