--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <!-- <script src="js/4.booleanos-operadores.js"></script> -->
         <!-- <script src="js/4.1.booleanos-repaso.js"></script> -->
         <!-- <script src="js/5.modales-condicional-if.js"></script> -->
-        <script src="js/6.switch.js"></script>
+        <!-- <script src="js/6.switch.js"></script> -->
+        <script src="js/7.1.for.js"></script>
     </body>
 </html>
