while y do...while

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <!-- <script src="js/4.1.booleanos-repaso.js"></script> -->
         <!-- <script src="js/5.modales-condicional-if.js"></script> -->
         <!-- <script src="js/6.switch.js"></script> -->
-        <script src="js/7.1.for.js"></script>
+        <!-- <script src="js/7.1.for.js"></script> -->
+        <!-- <script src="js/8.0.while.js"></script> -->
+        <!-- <script src="js/9.0.do-while.js"></script> -->
+        <script src="js/9.1.while-do-while.js"></script>
     </body>
 </html>
