--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <!-- <script src="js/7.1.for.js"></script> -->
         <!-- <script src="js/8.0.while.js"></script> -->
         <!-- <script src="js/9.0.do-while.js"></script> -->
-        <script src="js/9.1.while-do-while.js"></script>
+        <!-- <script src="js/9.1.while-do-while.js"></script> -->
+        <script src="js/10.0.arrays.js"></script>
     </body>
 </html>
