--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <!-- <script src="js/8.0.while.js"></script> -->
         <!-- <script src="js/9.0.do-while.js"></script> -->
         <!-- <script src="js/9.1.while-do-while.js"></script> -->
-        <script src="js/10.0.arrays.js"></script>
+        <!-- <script src="js/10.0.arrays.js"></script> -->
+        <!-- <script src="js/10.1.arrays-repaso.js"></script> -->
+        <!-- <script src="js/10.2.arrays-metodos.js"></script> -->
+        <script src="js/11.funciones.js"></script>
     </body>
 </html>
