--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <!-- <script src="js/10.0.arrays.js"></script> -->
         <!-- <script src="js/10.1.arrays-repaso.js"></script> -->
         <!-- <script src="js/10.2.arrays-metodos.js"></script> -->
-        <script src="js/11.funciones.js"></script>
+        <!-- <script src="js/11.funciones.js"></script> -->
+        <!-- <script src="js/11.1.funciones-arrays-ej1.js"></script> -->
+        <!-- <script src="js/11.2.funciones-arrays-sort-ej1.js"></script> -->
+        <script src="js/11.2.funciones-arrays-split-join.js"></script>
     </body>
 </html>
